# flask-breadcrumbs

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements-devel.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  license.rst  quickstart.rst  userguide.rst
docs/_templates/: sidebarintro.html
examples/: app.py  example_app.py
flask_breadcrumbs/: __init__.py  version.py
tests/: test_core.py
