# -*- coding: utf-8 -*-
#
# This file is part of Flask-Breadcrumbs
# Copyright (C) 2013, 2014, 2016 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Flask-Breadcrumbs is free software; you can redistribute it and/or
# modify it under the terms of the Revised BSD License; see LICENSE
# file for more details.

[metadata]
name = flask-breadcrumbs
version = attr: flask_breadcrumbs.__version__
description = "Flask-Breadcrumbs adds support for generating site breadcrumb navigation."
long_description = file: README.rst, CHANGES.rst
keywords = invenio metadata
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/flask-breadcrumbs/
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Flask>=1.0.4
    six>=1.12.0
    Flask-Menu>=0.2

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    mock>=1.0.0
    pytest-invenio>=1.4.0
    sphinx>=4.5
# Kept for backwards compatibility
docs =
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_breadcrumbs --cov-report=term-missing
testpaths = tests flask_breadcrumbs
filterwarnings = ignore::pytest.PytestDeprecationWarning
